# m26_g1_semantics

./: .gitignore  README.md  dataloader.py  train.py
deployment/library_crop_detection/: CMakeLists.txt  package.xml
deployment/library_crop_detection/include/: network.hpp  network_inference.hpp  opencv_stem_inference.hpp  pytorch_network.hpp  tensorrt_common.hpp  tensorrt_network.hpp  tensorrt_stem_inference.hpp
deployment/library_crop_detection/include/library_crop_detection/: cuda_normalizer.hpp  network.hpp  network_inference.hpp  network_output.hpp  network_output_visualizer.hpp  opencv_stem_inference.hpp  pytorch_network.hpp  semantic_labeler.hpp  stem_extractor.hpp  stem_extractor_gpu.hpp  stop_watch.hpp  tensorrt_common.hpp  tensorrt_network.hpp  torch_common.hpp
deployment/library_crop_detection/src/: CMakeLists.txt  common.h  cuda_normalizer.cu  handle_cuda_error.hpp  network.cpp  network_demo.cpp  network_inference.cpp  network_output.cpp  network_output_visualizer.cpp  opencv_stem_inference.cpp  pytorch_demo.cpp  pytorch_network.cpp  pytorch_network_demo.cpp  semantic_labeler.cpp  stem_extractor.cpp  stem_extractor_gpu.cpp  stem_extractor_gpu.cu  stop_watch.cpp  tensorrt_network.cpp  tensorrt_network_demo.cpp  test_network.cpp  test_tensorrt.cpp
deployment/ros_crop_detection/: CMakeLists.txt  package.xml
deployment/ros_crop_detection/config/: demo.yaml
deployment/ros_crop_detection/include/: crop_detection.hpp
deployment/ros_crop_detection/include/ros_crop_detection/: crop_detection.hpp
deployment/ros_crop_detection/launch/: crop_detection_demo.launch  demo.launch  demo_2.launch  image_extractor.launch
deployment/ros_crop_detection/msg/: NetworkInference.msg  StemInference.msg
deployment/ros_crop_detection/src/: crop_detection.cpp  crop_detection_node.cpp
model/: FCN.py
tensorrt_test/: CMakeLists.txt  README.md  package.xml
tensorrt_test/src/: tester_node.cpp
training/: __init__.py  dataloader.py  evalmetrics.py  losses.py  postprocessing.py  train.py  train_simple_unet.py  trainer.py  utils.py  vis.py  visualization.py
training/configs/: densenet28.yaml  densenet56.yaml  densenet56_retrain.yaml  densenet56s.yaml  deployment.yaml  fcn.yaml  hardnet.yaml  hardnet28.yaml  hardnet29.yaml  hardnet56.yaml  hardnet56s.yaml  hardnet_test.yaml  random_transformations.yaml  simple_unet.yaml  sugar_beet_dataset.yaml  test_split.yaml  train_split.yaml  training.yaml  val_split.yaml
training/model/: FCN.py  layers.py  simple_unet.py
training/models/: FCN.py  FCN_DenseNet.py  densenet.py  hardnet.py  layers.py  model.py  postprocessing_modules.py  setup.py  simple_unet.py  stem_inference.py  stem_voting.cpp  test_stem_voting.py
training/models/postprocessing_modules_cpp/: cast_votes.cpp  cast_votes.hpp  common.hpp  setup.py
training/models/stem_inference_cpp/: cast_votes_cuda.cu  common.cpp
training/postprocessing/: semantic_labeling.py  stem_extraction.py  stem_inference.py
training/postprocessing/stem_inference_cpp/: .gitignore  cast_votes_cpu.cpp  cast_votes_cuda.cu  common.hpp  setup.py
training/scripts/: compute_dataset_normalization_parameters.py  export_model.py  export_model_as_onnx.py  split_dataset.py  train.py
