<?xml version="1.0"?>
<package format="2">
  <name>ros_crop_detection</name>
  <version>0.1.0</version>
  <description>Crop detection inside ROS.</description>

  <maintainer email="s6ynchenk@uni-bonn.de">Yun-Yu Chen</maintainer>
  <maintainer email="s7jaquak@uni-bonn.de">Jan Quakernack</maintainer>

  <author email="s6ynchenk@uni-bonn.de">Yun-Yu Chen</author>
  <author email="s7jaquak@uni-bonn.de">Jan Quakernack</author>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>library_crop_detection</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>messgae_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
